@@ -249,6 +249,24 @@ name|hive
 operator|.
 name|ql
 operator|.
+name|parse
+operator|.
+name|SemanticException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
+name|ql
+operator|.
 name|lockmgr
 operator|.
 name|HiveLockManager
@@ -531,6 +549,14 @@ specifier|private
 name|String
 name|parent
 decl_stmt|;
+specifier|private
+name|int
+name|sessionTimeout
+decl_stmt|;
+specifier|private
+name|String
+name|quorumServers
+decl_stmt|;
 specifier|public
 name|ZooKeeperHiveLockManager
 parameter_list|()
@@ -606,9 +632,8 @@ operator|.
 name|getConf
 argument_list|()
 decl_stmt|;
-name|int
 name|sessionTimeout
-init|=
+operator|=
 name|conf
 operator|.
 name|getIntVar
@@ -619,44 +644,23 @@ name|ConfVars
 operator|.
 name|HIVE_ZOOKEEPER_SESSION_TIMEOUT
 argument_list|)
-decl_stmt|;
-name|String
+expr_stmt|;
 name|quorumServers
-init|=
+operator|=
 name|ZooKeeperHiveLockManager
 operator|.
 name|getQuorumServers
 argument_list|(
 name|conf
 argument_list|)
-decl_stmt|;
+expr_stmt|;
 try|try
 block|{
-if|if
-condition|(
-name|zooKeeper
-operator|!=
-literal|null
-condition|)
-block|{
-name|zooKeeper
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
-block|}
-name|zooKeeper
-operator|=
-operator|new
-name|ZooKeeper
+name|renewZookeeperInstance
 argument_list|(
-name|quorumServers
-argument_list|,
 name|sessionTimeout
 argument_list|,
-operator|new
-name|DummyWatcher
-argument_list|()
+name|quorumServers
 argument_list|)
 expr_stmt|;
 name|parent
@@ -739,6 +743,49 @@ argument_list|)
 throw|;
 block|}
 block|}
+specifier|private
+name|void
+name|renewZookeeperInstance
+parameter_list|(
+name|int
+name|sessionTimeout
+parameter_list|,
+name|String
+name|quorumServers
+parameter_list|)
+throws|throws
+name|InterruptedException
+throws|,
+name|IOException
+block|{
+if|if
+condition|(
+name|zooKeeper
+operator|!=
+literal|null
+condition|)
+block|{
+name|zooKeeper
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+name|zooKeeper
+operator|=
+operator|new
+name|ZooKeeper
+argument_list|(
+name|quorumServers
+argument_list|,
+name|sessionTimeout
+argument_list|,
+operator|new
+name|DummyWatcher
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 comment|/**    * Since partition names can contain "/", which need all the parent directories to be created by ZooKeeper,    * replace "/" by a dummy name to ensure a single hierarchy.    **/
 specifier|private
 name|String
@@ -789,7 +836,7 @@ operator|+
 literal|"-"
 return|;
 block|}
-comment|/**    * @param  key          The object to be locked    * @param  mode         The mode of the lock    * @param  keepAlive    Whether the lock is to be persisted after the statement    * Acuire the lock. Return null if a conflicting lock is present.    **/
+comment|/**    * @param  key          The object to be locked    * @param  mode         The mode of the lock    * @param  keepAlive    Whether the lock is to be persisted after the statement    * @param  numRetries   number of retries when the lock can not be acquired    * @param  sleepTime    sleep time between retries    *     * Acuire the lock. Return null if a conflicting lock is present.    **/
 specifier|public
 name|ZooKeeperHiveLock
 name|lock
@@ -802,6 +849,12 @@ name|mode
 parameter_list|,
 name|boolean
 name|keepAlive
+parameter_list|,
+name|int
+name|numRetries
+parameter_list|,
+name|int
+name|sleepTime
 parameter_list|)
 throws|throws
 name|LockException
@@ -818,6 +871,25 @@ argument_list|)
 decl_stmt|;
 name|String
 name|res
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|int
+name|tryNum
+init|=
+literal|0
+decl_stmt|;
+while|while
+condition|(
+literal|true
+condition|)
+block|{
+name|String
+name|msg
+init|=
+literal|null
 decl_stmt|;
 try|try
 block|{
@@ -879,6 +951,113 @@ operator|.
 name|EPHEMERAL_SEQUENTIAL
 argument_list|)
 expr_stmt|;
+block|}
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+name|msg
+operator|=
+name|e
+operator|.
+name|getLocalizedMessage
+argument_list|()
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|res
+operator|!=
+literal|null
+condition|)
+block|{
+break|break;
+block|}
+name|renewZookeeperInstance
+argument_list|(
+name|sessionTimeout
+argument_list|,
+name|quorumServers
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|tryNum
+operator|==
+name|numRetries
+condition|)
+block|{
+name|console
+operator|.
+name|printError
+argument_list|(
+literal|"Lock for "
+operator|+
+name|key
+operator|.
+name|getName
+argument_list|()
+operator|+
+literal|" cannot be acquired in "
+operator|+
+name|mode
+argument_list|)
+expr_stmt|;
+throw|throw
+operator|new
+name|SemanticException
+argument_list|(
+name|ErrorMsg
+operator|.
+name|LOCK_CANNOT_BE_ACQUIRED
+operator|.
+name|getMsg
+argument_list|()
+argument_list|)
+throw|;
+block|}
+name|tryNum
+operator|++
+expr_stmt|;
+name|console
+operator|.
+name|printInfo
+argument_list|(
+literal|"Lock for "
+operator|+
+name|key
+operator|.
+name|getName
+argument_list|()
+operator|+
+literal|" cannot be acquired in "
+operator|+
+name|mode
+operator|+
+literal|", will retry again later..., more info: "
+operator|+
+name|msg
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+name|sleepTime
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|InterruptedException
+name|e
+parameter_list|)
+block|{         }
 block|}
 name|int
 name|seqNo
@@ -1575,6 +1754,15 @@ argument_list|)
 decl_stmt|;
 if|if
 condition|(
+name|obj
+operator|==
+literal|null
+condition|)
+block|{
+continue|continue;
+block|}
+if|if
+condition|(
 operator|(
 name|key
 operator|==
@@ -1812,6 +2000,19 @@ argument_list|(
 literal|"@"
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|names
+operator|.
+name|length
+operator|<
+literal|2
+condition|)
+block|{
+return|return
+literal|null
+return|;
+block|}
 name|Table
 name|tab
 init|=
@@ -1832,13 +2033,17 @@ literal|false
 argument_list|)
 decl_stmt|;
 comment|// do not throw exception if table does not exist
-assert|assert
-operator|(
+if|if
+condition|(
 name|tab
-operator|!=
+operator|==
 literal|null
-operator|)
-assert|;
+condition|)
+block|{
+return|return
+literal|null
+return|;
+block|}
 if|if
 condition|(
 name|names
